The TopFrame class was added between UI_App and UI_Frame as a wxFrame, UI_Frame was changed to be a wxPanel: both as fixes to allow the Framework to connect to VE properly

--- a/futuregen/VE_UI/Makefile
+++ b/futuregen/VE_UI/Makefile
@@ -5,6 +5,7 @@ WX_LIB = $(shell wx-config --libs)
 APP = app
 
 OBJECTS = UI_App.o \
+            UI_TopFrame.o \
             UI_Frame.o \
             UI_Tabs.o \
             UI_NavTab.o\
