--- a/VE_Builder/Preprocessor/SConscript
+++ b/VE_Builder/Preprocessor/SConscript
@@ -4,16 +4,15 @@ pj = os.path.join
 Import('baseEnv')
 Import('Platform')
 
-sources = Split("""
+srcs = Split("""
    multiPlaneVtkOutput.cxx
    preprocessor.cxx
-   setScalarAndVector.cpp
-   fileIO.cxx
-   readWriteVtkThings.cxx
 """)
 
-sources = map(lambda s: pj('#', 'VE_Xplorer', s), sources)
+srcs = map(lambda s: pj('#', 'VE_Builder', 'Preprocessor', s), srcs)
 
 env = baseEnv.Copy()
 env.Append(CPPPATH = [os.getcwd()])
-env.Program(pj('#','bin',Platform,'Preprocessor'), source = sources)
+env.Append(LIBPATH = '#',
+              LIBS = 'Shared_Library')
+env.Program(pj('#','bin',Platform,'Preprocessor'), source = srcs)
