--- a/VE_Conductor/VE_Conductor.vcproj
+++ b/VE_Conductor/VE_Conductor.vcproj
@@ -167,10 +167,212 @@ echo Done
 			<Tool
 				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
+		<Configuration
+			Name="Debug_TAO|Win32"
+			OutputDirectory="$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="1"
+			CharacterSet="2">
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				AdditionalIncludeDirectories="&quot;$(TAO_ROOT)&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(WX_WIDGETS)\lib\msw&quot;;&quot;$(WX_WIDGETS)\include&quot;;&quot;$(VE_SUITE_HOME)\futuregen/Plugin&quot;;&quot;$(VE_SUITE_HOME)\VE_Conductor\skel&quot;"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_TAO;WINVER=0x400;_MT;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL"
+				MinimalRebuild="FALSE"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="3"
+				RuntimeTypeInfo="TRUE"
+				UsePrecompiledHeader="2"
+				AssemblerListingLocation="$(IntDir)/"
+				BrowseInformation="1"
+				WarningLevel="1"
+				Detect64BitPortabilityProblems="FALSE"
+				DebugInformationFormat="4"
+				CompileAs="0"/>
+			<Tool
+				Name="VCCustomBuildTool"/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib odbc32.lib odbccp32.lib comctl32.lib rpcrt4.lib wsock32.lib wxmsw24d.lib"
+				OutputFile="./VE_Conductor.exe"
+				LinkIncremental="2"
+				SuppressStartupBanner="TRUE"
+				AdditionalLibraryDirectories="$(TAO_ROOT)\tao,$(TAO_ROOT)\orbsvcs\orbsvcs,$(TAO_ROOT)\tao\PortableServer,$(WX_WIDGETS)\lib,$(ACE_ROOT)\bin,$(ACE_ROOT)\ace"
+				GenerateDebugInformation="TRUE"
+				ProgramDatabaseFile="$(OutDir)/VE_Conductor.pdb"
+				SubSystem="2"
+				TargetMachine="1"/>
+			<Tool
+				Name="VCMIDLTool"/>
+			<Tool
+				Name="VCPostBuildEventTool"/>
+			<Tool
+				Name="VCPreBuildEventTool"
+				Description="IDL Compiler"
+				CommandLine="echo C++ stubs. . .
+$(ACE_ROOT)/bin/tao_idl.exe -o ./skel -GI -I./idl   ./idl/VjObs.idl
+echo Done.
+
+"/>
+			<Tool
+				Name="VCPreLinkEventTool"/>
+			<Tool
+				Name="VCResourceCompilerTool"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
+				Name="VCWebDeploymentTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+		</Configuration>
 	</Configurations>
 	<References>
 	</References>
 	<Files>
+		<Filter
+			Name="src"
+			Filter="">
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_App.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_DataSetPanel.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_DataSetTab.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_DesignParTab.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_Frame.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_GeometryTab.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_ModelData.cxx">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_ModSelPanel.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_NavTab.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_ScalarTab.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_SoundsTab.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_StreamTab.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_Tabs.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_TeacherTab.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_TopFrame.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_TransTab.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_VecTab.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_VertTab.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_ViewLocTab.cpp">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_VisTab.cpp">
+			</File>
+			<File
+				RelativePath=".\skel\VjObsC.cpp">
+			</File>
+		</Filter>
+		<Filter
+			Name="headers"
+			Filter="">
+			<File
+				RelativePath="..\VE_Xplorer\cfdEnum.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\controlIds.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_App.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_DataSetPanel.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_DataSetTab.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_DesignParTab.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_Frame.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_GeometryTab.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_ModelData.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_ModSelPanel.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_NavTab.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_ScalarTab.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_SoundsTab.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_StreamTab.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_Tabs.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_TeacherTab.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_TopFrame.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_TransTab.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_VecTab.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_VertTab.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_ViewLocTab.h">
+			</File>
+			<File
+				RelativePath="..\futuregen\Ve_ui\UI_VisTab.h">
+			</File>
+			<File
+				RelativePath=".\skel\VjObsC.h">
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
