--- a/VE_Conductor/VE_JavaUI/VE_JavaUI.vcproj
+++ b/VE_Conductor/VE_JavaUI/VE_JavaUI.vcproj
@@ -127,6 +127,79 @@ echo Done.
 			<Tool
 				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
+		<Configuration
+			Name="Debug_TAO|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			IntermediateDirectory="$(ConfigurationName)"
+			ConfigurationType="1"
+			CharacterSet="2"
+			ManagedExtensions="TRUE">
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				PreprocessorDefinitions="WIN32;_DEBUG"
+				MinimalRebuild="FALSE"
+				BasicRuntimeChecks="0"
+				RuntimeLibrary="1"
+				UsePrecompiledHeader="3"
+				WarningLevel="3"
+				DebugInformationFormat="3"/>
+			<Tool
+				Name="VCCustomBuildTool"
+				Description="Compiling java classes. . ."
+				CommandLine="echo Compiling ObserverHolder. . .
+$(JAVA_HOME)\bin\javac -sourcepath &quot;../java_stuff&quot; -O -d &quot;../class_files&quot; ../java_stuff/ObserverHolder.java
+echo Compiling VjObsHolder. . .
+$(JAVA_HOME)\bin\javac -sourcepath &quot;../java_stuff&quot; -O -d &quot;../class_files&quot; ../java_stuff/VjObsHolder.java
+echo Compiling ObserverServant. . .
+$(JAVA_HOME)\bin\javac -sourcepath &quot;../java_stuff&quot; -O -d &quot;../class_files&quot; ../java_stuff/ObserverServant.java
+echo Compiling send_param. . .
+$(JAVA_HOME)\bin\javac -sourcepath &quot;../java_stuff&quot; -O -d &quot;../class_files&quot; ../java_stuff/send_param.java
+echo Compiling ack_win. . .
+$(JAVA_HOME)\bin\javac -sourcepath &quot;../java_stuff&quot; -O -d &quot;../class_files&quot; ../java_stuff/ack_win.java
+echo Compiling attrib. . .
+$(JAVA_HOME)\bin\javac -sourcepath &quot;../java_stuff&quot; -O -d &quot;../class_files&quot; ../java_stuff/attrib.java
+echo Compiling draw_baf. . .
+$(JAVA_HOME)\bin\javac -sourcepath &quot;../java_stuff&quot; -O -d &quot;../class_files&quot; ../java_stuff/draw_baf.java
+echo Compiling id_mapper. . .
+$(JAVA_HOME)\bin\javac -sourcepath &quot;../java_stuff&quot; -O -d &quot;../class_files&quot; ../java_stuff/id_mapper.java
+echo Compiling WholeNumberField. . .
+$(JAVA_HOME)\bin\javac -sourcepath &quot;../java_stuff&quot; -O -d &quot;../class_files&quot; ../java_stuff/WholeNumberField.java
+echo Compiling client. . .
+$(JAVA_HOME)\bin\javac -sourcepath &quot;../java_stuff&quot; -O -d &quot;../class_files&quot; ../java_stuff/client.java
+echo Compiling my_orb. . .
+$(JAVA_HOME)\bin\javac -sourcepath &quot;../java_stuff&quot; -O -d &quot;../class_files&quot; ../java_stuff/my_orb.java
+echo Done.
+"
+				AdditionalDependencies="VjObs.idl;Observer.idl,client.java"
+				Outputs="VjObs.class;Observer.class,client.class"/>
+			<Tool
+				Name="VCLinkerTool"
+				OutputFile="$(OutDir)\$(ProjectName).exe"
+				LinkIncremental="2"
+				GenerateDebugInformation="TRUE"
+				AssemblyDebug="1"/>
+			<Tool
+				Name="VCMIDLTool"/>
+			<Tool
+				Name="VCPostBuildEventTool"/>
+			<Tool
+				Name="VCPreBuildEventTool"/>
+			<Tool
+				Name="VCPreLinkEventTool"/>
+			<Tool
+				Name="VCResourceCompilerTool"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
+				Name="VCWebDeploymentTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+		</Configuration>
 	</Configurations>
 	<References>
 	</References>
