--- a/futuregen/VE_UI/VE_Conductor.vcproj
+++ b/futuregen/VE_UI/VE_Conductor.vcproj
@@ -83,7 +83,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\VE_Conductor\skel;../Plugin;./;../VE_UI/;&quot;$(WX_WIDGETS)\include&quot;;&quot;$(WX_WIDGETS)\lib\msw&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;"
+				AdditionalIncludeDirectories="&quot;$(VE_SUITE_HOME)\VE_Conductor\skel&quot;;&quot;$(VE_SUITE_HOME)\futuregen/Plugin&quot;;./;&quot;$(WX_WIDGETS)\include&quot;;&quot;$(WX_WIDGETS)\lib\msw&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;"
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;WINVER=0x400;_MT;wxUSE_GUI=1;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -335,18 +335,6 @@
 			</File>
 			<File
 				RelativePath="..\..\VE_Conductor\skel\VjObsC.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)/$(InputName)1.obj"/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						ObjectFile="$(IntDir)/$(InputName)1.obj"/>
-				</FileConfiguration>
 			</File>
 		</Filter>
 		<Filter
@@ -407,7 +395,7 @@
 				RelativePath="..\VE_UI\UI_VisTab.h">
 			</File>
 			<File
-				RelativePath="VjObsC.h">
+				RelativePath="..\..\VE_Conductor\skel\VjObsC.h">
 			</File>
 		</Filter>
 		<Filter
