no longer build java gui from VE_Installer, build VE_UI instead. VE_UI object files now stored in OS-specific directories

--- a/futuregen/VE_UI/Makefile
+++ b/futuregen/VE_UI/Makefile
@@ -4,27 +4,32 @@ WX_LIB = $(shell wx-config --libs)
 
 APP = app
 
-OBJECTS = UI_App.o \
-            UI_TopFrame.o \
-            UI_Frame.o \
-            UI_Tabs.o \
-            UI_NavTab.o\
-            UI_VisTab.o \
-            UI_VecTab.o \
-            UI_StreamTab.o \
-            UI_SoundsTab.o \
-            UI_GeometryTab.o \
-            UI_TeacherTab.o \
-            UI_TransTab.o \
-            UI_VertTab.o \
-            UI_ViewLocTab.o \
-            UI_DesignParTab.o \
-            UI_DataSetPanel.o \
-            UI_ModSelPanel.o \
-            UI_ModelData.o
+#OBJDIR is the place where the object files are stored.
+OBJDIR = $(CFDHOSTTYPE)
 
-ifeq (${TAO_BUILD}, TRUE)            
-   OBJECTS += VjObsC.o
+OBJECT_LIST = UI_App.o \
+              UI_TopFrame.o \
+              UI_Frame.o \
+              UI_Tabs.o \
+              UI_NavTab.o\
+              UI_VisTab.o \
+              UI_VecTab.o \
+              UI_StreamTab.o \
+              UI_SoundsTab.o \
+              UI_GeometryTab.o \
+              UI_TeacherTab.o \
+              UI_TransTab.o \
+              UI_VertTab.o \
+              UI_ViewLocTab.o \
+              UI_DesignParTab.o \
+              UI_DataSetPanel.o \
+              UI_ModSelPanel.o \
+              UI_ModelData.o
+
+OBJECTS = $(addprefix $(OBJDIR)/, $(OBJECT_LIST))
+
+ifeq (${TAO_BUILD}, TRUE)
+   OBJECT_LIST += VjObsC.o
    include ${ACE_ROOT}/include/makeinclude/wrapper_macros.GNU
    include ${ACE_ROOT}/include/makeinclude/macros.GNU
 #   include ${TAO_ROOT}/rules.tao.GNU
@@ -34,15 +39,15 @@ ifeq (${TAO_BUILD}, TRUE)
    include ${TAO_ROOT}/taoconfig.mk
 
    ACE_LIBS = -LANG:std -L${ACE_ROOT}/ace -lACE \
-               -lTAO_CosNaming \
-               -lTAO_Svc_Utils \
-               -lTAO_IORTable \
-               -lTAO_PortableServer \
-               -lTAO_Messaging \
-               -lTAO_ObjRefTemplate \
-               -lTAO_IORInterceptor \
-               -lTAO_Valuetype \
-               -L${TAO_ROOT}/tao -lTAO -lpthread
+              -lTAO_CosNaming \
+              -lTAO_Svc_Utils \
+              -lTAO_IORTable \
+              -lTAO_PortableServer \
+              -lTAO_Messaging \
+              -lTAO_ObjRefTemplate \
+              -lTAO_IORInterceptor \
+              -lTAO_Valuetype \
+              -L${TAO_ROOT}/tao -lTAO -lpthread
 #${LDFLAGS}
    ACE_INCLUDES = -I${TAO_ROOT}/orbsvcs
    ENUM_INCLUDES = -I${VE_SUITE_HOME}/VE_Xplorer
@@ -50,23 +55,17 @@ ifeq (${TAO_BUILD}, TRUE)
    vpath %.cpp    ${VE_SUITE_HOME}/VE_Conductor/skel
 endif
 
-.SUFFIXES : .o .cpp .cxx
+# implicit pattern rules
+$(OBJDIR)/%.o : %.cxx ; $(CXX) -g -c $(WX_CXX) $(CPP_FLAGS) -o $@ $<
+$(OBJDIR)/%.o : %.cpp ; $(CXX) -g -c $(WX_CXX) $(CPP_FLAGS) -o $@ $<
 
-.cpp.o :
-	$(CXX) -g -c  $(WX_CXX) $(CPP_FLAGS) -o $@ $<
-.cxx.o :
-	$(CXX) -g -c  $(WX_CXX) $(CPP_FLAGS) -o $@ $<
-all: $(APP)
+all:
+	mkdir -p $(OBJDIR)
+	$(MAKE) $(APP)
 
 $(APP): $(OBJECTS)
 	$(CXX) -g -o $(APP) $(OBJECTS) $(WX_LIB) $(ACE_LIBS)
 
 clean:
-	rm -rf *.o $(APP) ii_files
+	rm -rf $(OBJDIR) $(APP)
 
-# DO NOT DELETE THIS LINE -- g++dep uses it.
-# DO NOT PUT ANYTHING AFTER THIS LINE, IT WILL GO AWAY.
-
-
-
-# IF YOU PUT ANYTHING HERE IT WILL GO AWAY
