now allows gmake cleandepend (even though there are no depends to clean)

--- a/futuregen/VE_UI/Makefile
+++ b/futuregen/VE_UI/Makefile
@@ -69,3 +69,8 @@ $(APP): $(OBJECTS)
 clean:
 	rm -rf $(OBJDIR) $(APP)
 
+cleandepend:
+#	@echo "    There are no depends to clean with this makefile"
+#	@echo ""
+# (defined for compatability with VE_Installer)
+
