now checks that solution dofLabels are UX, UY, and UZ

--- a/VE_Builder/Translator/ansys/Makefile
+++ b/VE_Builder/Translator/ansys/Makefile
@@ -26,7 +26,7 @@ LINKALL_ON= -all
 LINKALL_OFF=
 
 #for some debug print information...
-#EXTRA_CXXFLAGS+= -DPRINT_HEADERS
+EXTRA_CXXFLAGS+= -DPRINT_HEADERS
 
 STATIC_ON= @APP_LINK_STATIC_ON@
 STATIC_OFF= @APP_LINK_STATIC_OFF@
