fixes to get pf and tao to work on win32

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -178,7 +178,8 @@ SRCS=\
    cfdEnvironmentHandler.cxx \
    cfdModelHandler.cxx \
    cfdSoundHandler.cxx \
-   cfdPfSceneManagement.cxx 
+   cfdPfSceneManagement.cxx \
+   CorbaManager.cxx
 
 #   cfdDrawManager.cxx
 
